--- a/style.css
+++ b/style.css
@@ -1,142 +1,1 @@
-body {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    background-color: crimson;
-}
-
-h4, ol {
-    color: blueviolet;
-}
-
-.container {
-    width: 50%;
-    margin: 0 auto;
-    background-color: white;
-    padding: 10px;
-}
-
-.flex-parent {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 10px;
-}
-
-img {
-    width: 100%;
-}
-
-.penulisan {
-    text-indent: 15px;
-    margin-bottom: 0px;
-}
-
-.item-flex {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    gap: 20px;
-}
-
-.input-flex {
-    width: 70%;
-}
-
-.label-flex {
-    width: 30%;
-}
-
-input[type="text"],
-input[type="date"] {
-    width: 100%;
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-hr {
-    width: 100%;
-    height : 2px;
-    background-color: black;
-}
-
-.gol_darah {
-    margin-left: 20px;
-}
-
-.flex-footer {
-    display: flex;
-    justify-content: space-around;
-}
-
-.tanggal_pengiriman {
-    display: flex;
-    flex-direction: column;
-}
-
-button {
-    width: 20%;
-    margin-top: 20px;
-    outline: none;
-    border: none;
-    background-color: crimson;
-    padding: 10px;
-    border-radius: 2px;
-    color: white;
-    cursor: pointer;
-}
-
-@media screen and (max-width: 800px) {
-.container {
-    width: 75%;
-    padding: 0;
-}
-
-.item-flex {
-    flex-direction: column;
-    gap: 5px;
-}
-
-.input-flex {
-    width: 100%;
-}
-
-.label-flex {
-    width: 100%;
-}
-
-.catatan {
-    visibility: visible;
-}
-
-.title {
-    font-size: 1rem;
-  }
-}
-
-@media screen and (max-width: 420px) {
-.container {
-    width: 100%;
-    padding: 0;
-}
-
-.item-flex {
-    flex-direction: column;
-    gap: 5px;
-}
-
-.input-flex {
-    width: 100%;
-}
-
-.label-flex {
-    width: 100%;
-}
-
-.catatan {
-    visibility: hidden;
-    }
-}
+body{box-sizing:border-box;}.container{width:50%;}body{margin-left:0;}.container,body{margin-bottom:0;}.container{margin-left:auto;}body{margin-right:0;}.container,body{margin-top:0;}body{padding-left:0;}body{padding-bottom:0;}body{padding-right:0;}.container{margin-right:auto;}body{padding-top:0;}.container{background-color:white;}body{background-color:crimson;}.container,[class~=flex-parent],button{padding-left:.104166667in;}[class~=flex-parent],button,.container{padding-bottom:.104166667in;}[class~=flex-parent],button,.container{padding-right:.104166667in;}button,[class~=flex-parent],.container{padding-top:.104166667in;}h4,ol{color:blueviolet;}hr,input[type="text"],table,img{width:100%;}[class~=flex-footer],[class~=item-flex],[class~=tanggal_pengiriman],[class~=flex-parent]{display:flex;}[class~=flex-parent]{flex-direction:column;}[class~=flex-parent]{gap:7.5pt;}table{border-collapse:collapse;}hr{height:.020833333in;}hr{background-color:black;}button{width:20%;}button{margin-top:20px;}button{outline:none;}button{border-left-width:medium;}button{border-bottom-width:medium;}button{border-right-width:medium;}[class~=penulisan]{text-indent:.9375pc;}[class~=penulisan]{margin-bottom:0pc;}button{border-top-width:medium;}[class~=item-flex]{justify-content:space-between;}[class~=item-flex]{flex-direction:row;}[class~=item-flex]{gap:20px;}button{border-left-style:none;}button{border-bottom-style:none;}[class~=input-flex]{width:70%;}button{border-right-style:none;}[class~=label-flex]{width:30%;}[class~=gol_darah]{margin-left:20px;}button{border-top-style:none;}button{border-left-color:currentColor;}button{border-bottom-color:currentColor;}button{border-right-color:currentColor;}[class~=flex-footer]{justify-content:space-around;}button{border-top-color:currentColor;}button{border-image:none;}[class~=tanggal_pengiriman]{flex-direction:column;}button{background-color:crimson;}button{border-radius:.125pc;}button{color:white;}button{cursor:pointer;}input[type="date"]{width:100%;}@media screen and (max-width: 800px){[class~=container]{width:75%;}[class~=container]{padding-left:0;}[class~=container]{padding-bottom:0;}[class~=container]{padding-right:0;}[class~=container]{padding-top:0;}.item-flex{flex-direction:column;}.item-flex{gap:3.75pt;}[class~=input-flex],[class~=label-flex]{width:100%;}[class~=catatan]{visibility:visible;}[class~=title]{font-size:1rem;}}@media screen and (max-width: 420px){[class~=input-flex],[class~=label-flex],[class~=container]{width:100%;}[class~=container]{padding-left:0;}[class~=container]{padding-bottom:0;}[class~=container]{padding-right:0;}[class~=container]{padding-top:0;}[class~=item-flex]{flex-direction:column;}[class~=item-flex]{gap:5px;}[class~=catatan]{visibility:hidden;}}
